--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.12",
     "@astrojs/check": "^0.5.10",
+    "@contentful/rich-text-html-renderer": "^16.3.5",
+    "astro": "^4.5.12",
+    "contentful": "^10.8.6",
     "typescript": "^5.4.3"
   }
 }
