--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@contentful/rich-text-html-renderer": "^16.3.5",
     "astro": "^4.5.12",
     "contentful": "^10.8.6",
+    "date-fns": "^3.6.0",
     "typescript": "^5.4.3"
   }
 }
